# math-for-ml

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  exercises.ipynb  genindex.html  index.html  linear_algebra.ipynb  objects.inv  pyproject.toml  search.html  searchindex.js
.github/wokflows/: docs.yaml
_sources/: index.rst.txt
_sources/calculus/: ca_w1.ipynb.txt  ca_w2.ipynb.txt  ca_w3.ipynb.txt
_sources/linear_algebra/: index.rst.txt  la_extra.ipynb.txt  la_w1.ipynb.txt  la_w2.ipynb.txt  la_w3.ipynb.txt  la_w4.ipynb.txt
_sources/notebooks/: linear_algebra.ipynb.txt
_static/: custom.css  custom.js
calculus/: ca_w1.html  ca_w1.ipynb  index.html
docs/: Makefile  conf.py  index.rst
docs/_static/: custom.js
docs/calculus/: ca_extra.ipynb  ca_w1.ipynb  ca_w2.ipynb  ca_w3.ipynb  index.rst
docs/linear_algebra/: index.rst  la_exer.ipynb  la_extra.ipynb  la_w3.ipynb  la_w4.ipynb
docs/notebooks/: linear_algebra.ipynb
linear_algebra/: index.html  la_exer.html  la_exer.ipynb  la_extra.html  la_extra.ipynb  la_w1.html  la_w1.ipynb  la_w2.html  la_w2.ipynb  la_w3.html  la_w3.ipynb  la_w4.html  la_w4.ipynb
notebooks/: linear_algebra.html  linear_algebra.ipynb
