[tool.poetry]
name = "math-for-ml"
version = "0.1.0"
description = "Mathematics for Machine Learning and Data Science "
authors = ["Federico Trifoglio <federico.trifoglio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.25.2"
matplotlib = "^3.8.0"
ipykernel = "^6.25.2"
scipy = "^1.11.2"
sympy = "^1.12"
jax = "^0.4.16"
jaxlib = "^0.4.16"
plotly = "^5.17.0"
shapely = "^2.0.2"
cvxopt = "^1.3.2"

[tool.poetry.group.docs.dependencies]
Sphinx = "^4.5.0"
nbsphinx = "^0.9.3"
sphinx-book-theme = "^0.3.3"
ipython = "^8.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
